2015-01-21  Eric Botcazou  <ebotcazou@adacore.com>

	* configure.in: Add Visium support.
	* configure: Regenerate.
	* visium/: New directory.

2015-01-15  DJ Delorie  <dj@redhat.com>

	* rl78/crt0.S: Initialize .saddr.  Avoid using SEL.
	* rl78/rl78-sim.ld: Add .saddr/.frodata section.
	* rl78/rl78.ld: Likewise.
	* rl78/rl78-sim.ld: Make room for virtual register banks.
	* rl78/rl78.ld: Likewise.

	* rl78/vregs.h: New.
	* rl78-sys.h: Use it.
	* rl78/swrite.S: New.
	* rl78/Makefile.in: Build it.
	* rl78/write.c: Use it.

2015-01-14  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/include/or1k-sprs.h: New auto-generated header file.

2015-01-05  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* lm32/Makefile.in (install): Respect DESTDIR.
	(install-scripts): Ditto.
	* mep/Makefile.in (install): Ditto.
	* mt/Makefile.in (install): Ditto.
	* rl78/Makefile.in (install): Ditto.

2014-12-27  Anthony Green  <green@moxielogic.com>

	* moxie/crt0.S (_start): sub.l is now sub.

2014-12-15  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/Makefile.in: Build and install board libraries
	* or1k/board.h: New file
	* or1k/boards/README: New file
	* or1k/boards/atlys.S: New file
	* or1k/boards/de0_nano.S: New file
	* or1k/boards/ml501.S: New file
	* or1k/boards/ml509.S: New file
	* or1k/boards/optimsoc.S: New file
	* or1k/boards/or1ksim-uart.S: New file
	* or1k/boards/or1ksim.S: New file
	* or1k/boards/ordb1a3pe1500.S: New file
	* or1k/boards/ordb2a.S: New file
	* or1k/boards/orpsocrefdesign.S: New file
	* or1k/boards/tmpl.S: New file
	* or1k/boards/tmpl.c: New file

2014-12-15  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/Makefile.in: Add libor1k
	* or1k/README: New file
	* or1k/caches-asm.S: New file
	* or1k/exceptions-asm.S: New file
	* or1k/exceptions.c: New file
	* or1k/impure.c: New file
	* or1k/include/or1k-nop.h: New file
	* or1k/include/or1k-support.h: New file
	* or1k/interrupts-asm.S: New file
	* or1k/interrupts.c: New file