@@ -14,6 +14,9 @@
  * they apply.
  */
 #include "asm.h"
+
+.register %g2, #scratch
+.register %g3, #scratch
 	
 .data
         .align  8
